syntax = "proto3";
package lessons;
import "google/protobuf/empty.proto";
option go_package = "course-service/pb";

service LessonService {
  // CRUD Operations

  // Create a new lesson
  rpc CreateLesson(CreateLessonRequest) returns (CreateLessonResponse);

  // Get a specific lesson by course_id and lesson id (excludes soft-deleted)
  rpc GetLesson(GetLessonRequest) returns (GetLessonResponse);

  // Get a lesson by course_id and sequence (excludes soft-deleted)
  rpc GetLessonBySequence(GetLessonBySequenceRequest) returns (GetLessonBySequenceResponse);

  // List all lessons by course_id (excludes soft-deleted)
  rpc ListLessons(ListLessonsRequest) returns (ListLessonsResponse);

  // Update a lesson
  rpc UpdateLesson(UpdateLessonRequest) returns (UpdateLessonResponse);

  // Soft delete a lesson
  rpc DeleteLesson(DeleteLessonRequest) returns (google.protobuf.Empty);

  // Additional Features

  // Search lessons by title within a course (excludes soft-deleted)
  rpc SearchLessonsByTitle(SearchLessonsByTitleRequest) returns (ListLessonsResponse);

  // Search lessons by lesson type within a course (excludes soft-deleted)
  rpc SearchLessonsByType(SearchLessonsByTypeRequest) returns (ListLessonsResponse);

  // Get the total number of lessons for a course (excludes soft-deleted)
  rpc GetTotalLessons(GetTotalLessonsRequest) returns (GetTotalLessonsResponse);

  // Get total lessons by lesson type (video/article) for a course (excludes soft-deleted)
  rpc GetTotalLessonsByType(GetTotalLessonsByTypeRequest) returns (GetTotalLessonsResponse);


}

// Define the Lesson message
message Lesson {
  uint32 id = 1;
  uint32 course_id = 2;
  string title = 3;
  string content_url = 4;
  string lesson_type = 5;  // 'video' or 'article'
  uint32 sequence = 6;
  string created_at = 7;
  string updated_at = 8;
  string deleted_at = 9;  // Soft delete timestamp
}

// Summary of a lesson
message LessonSummary {
  uint32 id = 1;
  string title = 2;
  string lesson_type = 3;
  uint32 sequence = 4;
}

// Request & Response Messages

message CreateLessonRequest {
  uint32 course_id = 1;
  string title = 2;
  string content_url = 3;
  string lesson_type = 4;
  uint32 sequence = 5;
}

message CreateLessonResponse {
  uint32 id = 1;
}

message UpdateLessonRequest {
  uint32 id = 1;
  uint32 course_id = 2;
  string title = 3;
  string content_url = 4;
  string lesson_type = 5;
  uint32 sequence = 6;
}

message UpdateLessonResponse {
  Lesson lesson = 1;
}

message GetLessonRequest {
  uint32 id = 1;  // ID of the lesson
}

message GetLessonResponse {
  Lesson lesson = 1;
}

message GetLessonBySequenceRequest {
  uint32 course_id = 1;
  uint32 sequence = 2;
}

message GetLessonBySequenceResponse {
  Lesson lesson = 1;
}

message ListLessonsRequest {
  uint32 course_id = 1;
}

message ListLessonsResponse {
  repeated LessonSummary lessons = 1;
}

message DeleteLessonRequest {
  uint32 course_id = 1;
  uint32 id = 2;
}

// Additional Features

message SearchLessonsByTitleRequest {
  uint32 course_id = 1;
  string title = 2;
}

message SearchLessonsByTypeRequest {
  uint32 course_id = 1;
  string lesson_type = 2;  // 'video' or 'article'
}

message GetTotalLessonsRequest {
  uint32 course_id = 1;
}

message GetTotalLessonsResponse {
  uint32 total = 1;
}

message GetTotalLessonsByTypeRequest {
  uint32 course_id = 1;
  string lesson_type = 2;  // 'video' or 'article'
}
