syntax = "proto3";

package learningProgress;

import "google/protobuf/timestamp.proto";
import "meta/meta.proto";
option go_package = "learningProgress/learningProgress;learningProgress";

message LearningProgress {
    uint32 id = 1;
    uint32 enrollment_id = 2;
    uint32 lesson_id = 3;
    string status = 4;
    google.protobuf.Timestamp completed_at = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CreateLearningProgressRequest {
    uint32 enrollment_id = 1;
    uint32 lesson_id = 2;
    string status = 3;
    google.protobuf.Timestamp completed_at = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message CreateLearningProgressResponse {
    meta.Meta meta = 1;
    LearningProgress learning_progress = 2;
}



// endpoints
service LearningProgressService {
    rpc CreateLearningProgress(CreateLearningProgressRequest) returns (CreateLearningProgressResponse);

}